# magenta

./: .gitignore  package-lock.json  package.json
model/: README.md  fastgen.py  generate.py  h12_bo16.py  main.py  reader.py  setup.cfg  utils.py
model/src/package/: fastgen.py  generate.py  main.py  masked.py
src/: App.js  index.css
src/assets/: text.js
