[metadata]
name = hawkhacks-wavenet
version = 0.0.1
author = Isabel Abonitalla
author_email = isabelabonitalla@gmail.com
description = A copy of the wavenet model for use at the HawkHacks hackathon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isabiiil/magenta
project_urls =
    Bug Tracker = https://github.com/isabiiil/magenta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src